--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,8 @@
 Changes since 7.1.0
+    - Fixed a bug that Growl notification did not work in specific environment.
+    - Fixed a bug that the default setting of checkForUpdate was "Nothing".
     - Improved multi-touch extension around sleep/wakeup.
-    - Fixed a minor bug.
-    - Added about XXX kinds settings.
+    - Added about 20 kinds settings.
 
 ----------------------------------------------------------------------
 = version 7.1.0 =
