--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 Changes since 7.2.0
+    - Added about XXX kinds settings.
 
 ----------------------------------------------------------------------
 = version 7.2.0 =
