--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 Changes since 7.2.0
+    - Added Option::NOREPEAT at <autogen>.
     - Added about XXX kinds settings.
 
 ----------------------------------------------------------------------
