--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Changes since 7.2.0
     - Added Option::NOREPEAT at <autogen>.
     - Improved "Lazy-Modifier (KeyCode::VK_LAZY_*)" behavior.
+    - Clean up the internal code. The connection between kernel and userspace became more easier to understand.
     - Added about XXX kinds settings.
 
 ----------------------------------------------------------------------
