--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Changes since 7.2.0
     - Clean up the internal source code. The connection between kernel and userspace became more easier to understand.
     - Added KeyCode::VK_MOUSEKEY_BUTTON_*.
     - Added Option::NOREPEAT at <autogen>.
+    - Added DeviceProduct::ANY at <device_only>, <device_not>.
     - Added about XXX kinds settings.
 
 ----------------------------------------------------------------------
