--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Changes since 7.2.0
+= version 7.3.0 =
     - Improved stability when using Sticky Keys in Universal Access.
     - Improved stability when using multi-touch extension together.
     - Improved "Lazy-Modifier (KeyCode::VK_LAZY_*)" behavior.
@@ -7,7 +7,7 @@ Changes since 7.2.0
     - Added KeyCode::VK_MOUSEKEY_BUTTON_*.
     - Added Option::NOREPEAT at <autogen>.
     - Added DeviceProduct::ANY at <device_only>, <device_not>.
-    - Added about XXX kinds settings.
+    - Added about 80 kinds settings.
 
 ----------------------------------------------------------------------
 = version 7.2.0 =
