--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes since 7.3.0
+    - Some minor improvements.
+    - Added about XXX kinds settings.
+
+----------------------------------------------------------------------
 = version 7.3.0 =
     - Improved stability when using Sticky Keys in Universal Access.
     - Improved stability when using multi-touch extension together.
