--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 Changes since 7.3.0
+    - Clean up "Simultaneous Vi Mode".
+      (and split some options into "Home Row Arrow and Modifier Mode".)
     - Added KeyCode::VK_STICKY_*_FORCE_ON, KeyCode::VK_STICKY_*_FORCE_OFF.
     - Some minor improvements.
     - Added about XXX kinds settings.
