--- a/NEWS
+++ b/NEWS
@@ -1,15 +1,18 @@
 Changes since 7.3.0
+    - Some improvements on Mac OS X 10.7 (Lion).
     - Removed "General > Enable CapsLock LED Hack".
       If you're using this setting for PCKeyboardHack,
       use "No Action" configuration instead.
       http://pqrs.org/macosx/keyremap4macbook/extra.html#t1p1
     - Clean up "Simultaneous Vi Mode".
       (and split some options into "Home Row Arrow and Modifier Mode".)
+    - Added "[Key Overlaid Modifier] Initial Modifier Wait" preference into "Key Repeat" tab.
+      KeyOverlaidModifier changes key to modifier after this wait.
+      This preference is useful if your typing speed is too fast.
     - Added KeyCode::VK_STICKY_*_FORCE_ON, KeyCode::VK_STICKY_*_FORCE_OFF.
     - Added --DropScrollWheel--.
-    - Some improvements on Mac OS X 10.7 (Lion).
     - Some minor improvements.
-    - Added about XXX kinds settings.
+    - Added some settings to preset.
 
 ----------------------------------------------------------------------
 = version 7.3.0 =
