--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 Changes since 7.4.0
+    - Added --StripModifierFromScrollWheel--.
     - Added KeyCode::VK_CONSUMERKEY_*.
     - Added about XXX kinds settings.
 
