--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Changes since 7.4.0
     - Added --StripModifierFromScrollWheel--.
+    - Added Option::KEYTOKEY_BEFORE_KEYDOWN, Option::KEYTOKEY_AFTER_KEYUP.
     - Added KeyCode::VK_CONSUMERKEY_*.
     - Added about XXX kinds settings.
 
