--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 Changes since 7.4.0
+    - Support Growl-1.3 on notifications.
+      http://pqrs.org/macosx/keyremap4macbook/document.html#t4
     - Added --StripModifierFromScrollWheel--.
     - Added Option::KEYTOKEY_BEFORE_KEYDOWN, Option::KEYTOKEY_AFTER_KEYUP.
     - Added KeyCode::VK_CONSUMERKEY_*.
