--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,7 @@
-Changes since 7.4.0
+Changes since 7.5.0
+
+----------------------------------------------------------------------
+= version 7.5.0 =
     - Dynamic ApplicationType,DeviceVendor,DeviceProduct definition feature has been added.
     - Support Growl-1.3 on notifications.
       http://pqrs.org/macosx/keyremap4macbook/document.html#t4
@@ -6,7 +9,7 @@ Changes since 7.4.0
     - Added Option::KEYTOKEY_BEFORE_KEYDOWN, Option::KEYTOKEY_AFTER_KEYUP.
     - Added KeyCode::VK_CONSUMERKEY_*.
     - Some minor improvements.
-    - Added about XXX kinds settings.
+    - Added about 40 kinds settings to preset.
 
 ----------------------------------------------------------------------
 = version 7.4.0 =
