--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 Changes since 7.5.0
+    - Added <replacementdef>. You can replace preset settings behavior by this.
+    - Improved KeyCode::VK_CHANGE_INPUTMODE_* behavior.
 
 ----------------------------------------------------------------------
 = version 7.5.0 =
